Mon May 12 19:02:53 UTC 2008  Ciju John  <johnc at ociweb dot com>

        * dds/DCPS/Service_Participant.cpp:
          Option TransportDebugLevel renamed to DCPSTransportDebugLevel.

Mon May 12 18:41:29 UTC 2008  Adam Mitz  <mitza@ociweb.com>

        * tests/DCPS/FooTest5/publisher.cpp:

          Close the writers_completed file as soon as possible, so changes are
          flushed to the disk.

        * tests/DCPS/FooTest5/run_test.pl:

          For udp and (unreliable) multicast, pass a -y 50 to the publisher so
          that it sleeps for 50 ms between writes.

Mon May 12 16:03:40 UTC 2008  Ciju John  <johnc at ociweb dot com>

        * performance-tests/DCPS/Sync/SyncServer_i.cpp:
          Fix type conversion warning.

Sun May 11 07:12:25 UTC 2008  Ciju John  <johnc at ociweb dot com>

        * performance-tests/DCPS/InfoRepo_population/SyncServer.cpp:
          Bump up ref count to bypass ORB memory management.

        * performance-tests/DCPS/Sync/SyncServer_i.h:
        * performance-tests/DCPS/Sync/SyncServer_i.cpp:
          Fix incorrect ID assignment.

Fri May  9 21:37:04 UTC 2008  Brian Johnson  <johnsonb@ociweb.com>

        * dds/DCPS/transport/framework/TransportImpl.cpp:

          Making sure the ReactorTask doesn't get destroyed till everything else is shutdown.

        * dds/DCPS/transport/simpleUnreliableDgram/SimpleUnreliableDgramTransport.cpp:

          Making sure the ReactorTask isn't destroyed till the socket is destroyed.

        * dds/InfoRepo/DCPSInfo_i.cpp:

          This code went in to fix a memory leak, but exercises infrastructure code that
          isn't valid while we are going down.  Removing the code since currently this is
          only at shutdown.

Fri May  9 15:15:29 UTC 2008  Adam Mitz  <mitza@ociweb.com>

        * bin/DCPS/CPPTemplate.pm:
        * dds/DCPS/DataReaderImpl.h:
        * dds/DCPS/DataReaderImpl.cpp:

          Unlock the sample_lock_ during callbacks to the data reader