@@ -1,3 +1,13 @@
+Mon May 12 20:52:01 UTC 2008  Brian Johnson  <johnsonb@ociweb.com>
+
+        * performance-tests/DCPS/McastListenerTest/Writer.cpp:
+        * performance-tests/DCPS/TCPListenerTest/Writer.cpp:
+        * performance-tests/DCPS/TCPProfilingTest/Writer.cpp:
+        * performance-tests/DCPS/UDPListenerTest/Writer.cpp:
+
+          Moved condition signal to the end of the Writer::svc function, to 
+          avoid race condition.
+
 Mon May 12 19:02:53 UTC 2008  Ciju John  <johnc at ociweb dot com>
 
         * dds/DCPS/Service_Participant.cpp:
